<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top" >

        <Button
            android:id="@+id/cHme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/button_menu"
            android:padding="@dimen/cfg_padding"
            android:text="@string/cfg_home"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/wp1"
            android:layout_width="@dimen/cfg_padding_small"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cHme" />

        <Button
            android:id="@+id/cPtc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/wp1"
            android:background="@drawable/button_menu"
            android:padding="@dimen/cfg_padding"
            android:text="@string/cfg_practice"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/wp2"
            android:layout_width="@dimen/cfg_padding_small"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cPtc" />

        <Button
            android:id="@+id/cRpt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/wp2"
            android:background="@drawable/button_menu"
            android:padding="@dimen/cfg_padding"
            android:text="@string/cfg_report"
            android:textColor="#fff" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="20dip" >

        <TableLayout
            android:id="@+id/tOperator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TableRow>

                <multiDiv.Math.Comp.ToggleMa
                    android:id="@+id/tAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@drawable/rec_lines"
                    android:textColor="#808080"
                    android:textOff="@string/num_plus"
                    android:textOn="@string/num_plus"
                    android:textSize="@dimen/cfg_font_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2" />

                <multiDiv.Math.Comp.ToggleMa
                    android:id="@+id/tSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@drawable/rec_lines"
                    android:textColor="#808080"
                    android:textOff="@string/num_minus"
                    android:textOn="@string/num_minus"
                    android:textSize="@dimen/cfg_font_size" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" />
            </TableRow>

            <TableRow>

                <multiDiv.Math.Comp.ToggleMa
                    android:id="@+id/tMul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@drawable/rec_lines"
                    android:textColor="#808080"
                    android:textOff="@string/num_multi"
                    android:textOn="@string/num_multi"
                    android:textSize="@dimen/cfg_font_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2" />

                <multiDiv.Math.Comp.ToggleMa
                    android:id="@+id/tDiv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@drawable/rec_lines"
                    android:textColor="#808080"
                    android:textOff="@string/num_div"
                    android:textOn="@string/num_div"
                    android:textSize="@dimen/cfg_font_size" />
            </TableRow>
        </TableLayout>

        <multiDiv.Math.Comp.TextViewMa
            android:id="@+id/tTestLb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tOperator"
            android:text="@string/cfg_num_fact"
            android:textSize="@dimen/cfg_font_size" />

        <TextView
            android:id="@+id/w1"
            android:layout_width="@dimen/cfg_padding_small"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tTestLb"
            android:layout_toRightOf="@+id/tTestLb" />

        <multiDiv.Math.Comp.TextViewMa
            android:id="@+id/tTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/w1"
            android:layout_toRightOf="@+id/w1"
            android:text=""
            android:textSize="@dimen/cfg_font_size" />

        <SeekBar
            android:id="@+id/tNumTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tTestLb"
            android:max="90" />

        <multiDiv.Math.Comp.TextViewMa
            android:id="@+id/tTimeLb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tNumTest"
            android:text="@string/cfg_test_time"
            android:textSize="@dimen/cfg_font_size" />

        <TextView
            android:id="@+id/w2"
            android:layout_width="@dimen/cfg_padding_small"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tTimeLb"
            android:layout_toRightOf="@+id/tTimeLb" />

        <multiDiv.Math.Comp.TextViewMa
            android:id="@+id/tTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/w2"
            android:layout_toRightOf="@+id/w2"
            android:text=""
            android:textSize="@dimen/cfg_font_size" />

        <SeekBar
            android:id="@+id/tTimeTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tTimeLb"
            android:max="270" />

        <multiDiv.Math.Comp.TextViewMa
            android:id="@+id/tNumberLb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tTimeTest"
            android:text="@string/cfg_max_num"
            android:textSize="@dimen/cfg_font_size" />

        <TextView
            android:id="@+id/w3"
            android:layout_width="@dimen/cfg_padding_small"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tNumberLb"
            android:layout_toRightOf="@+id/tNumberLb" />

        <multiDiv.Math.Comp.TextViewMa
            android:id="@+id/tNumber"
            android:layout_width="40dip"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/w3"
            android:layout_toRightOf="@+id/w3"
            android:text=""
            android:textSize="@dimen/cfg_font_size" />

        <SeekBar
            android:id="@+id/tNumberTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tNumberLb"
            android:max="10" />
    </RelativeLayout>

</LinearLayout>